--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
     "build": "rm -rf .next && next build",
     "dev": "next dev -p 9028",
     "format": "prettier --log-level warn --write .",
-    "start": "next start",
+    "start": "next start -p 9028",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "keywords": [],
@@ -15,6 +15,7 @@
     "@coinbase/onchainkit": "0.9.5",
     "@vercel/og": "0.6.2",
     "axios": "^0.27.2",
+    "moment": "^2.29.3",
     "next": "13.5.6",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
