--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@coinbase/onchainkit": "0.9.5",
     "@vercel/og": "0.6.2",
     "axios": "^0.27.2",
+    "bignumber.js": "^9.0.2",
     "moment": "^2.29.3",
     "next": "13.5.6",
     "react": "^18.2.0",
